.provarCaches/00D5f000005vwGkEAI/objects/rstk__syusrdiv__c.object
<CustomObject>
    <description>syusrdiv__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syusrdiv_syusr__r.rstk__externalid__c &amp; &apos;_&apos; &amp;   rstk__syusrdiv_sydiv__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__syusrdiv_syusr__r.Name &amp; &apos; (&apos; &amp;  rstk__syusrdiv_sydiv__r.rstk__sydiv_div__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syusrdiv_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syusrdiv_sydiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Manufacturing User Divisions</relationshipLabel>
        <relationshipName>syusrdivs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syusrdiv_syusr__c</fullName>
        <label>Manufacturing User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Manufacturing User Divisions</relationshipLabel>
        <relationshipName>syusrdivs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__syusrdiv_useaslastdiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use as Current Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syusrdiv_useassalesdiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use as Current Sales Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Manufacturing User Division</label>
    <listViews>
        <fullName>rstk__User_Divisions</fullName>
        <columns>NAME</columns>
        <columns>rstk__syusrdiv_syusr__c</columns>
        <columns>rstk__syusrdiv_active__c</columns>
        <columns>rstk__syusrdiv_sydiv__c</columns>
        <columns>rstk__syusrdiv_useaslastdiv__c</columns>
        <columns>rstk__syusrdiv_useassalesdiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>User Divisions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturing User Divisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>